package com.gorden5566.learn.pattern.manual.decorator.demo.component;

public abstract class Component {
    /**
     * 抽象的方法
     */
    public abstract void operate();
}
