package com.gorden5566.learn.pattern.manual.decorator.demo.component;

public class ConcreteComponent extends Component {
    @Override
    public void operate() {
        System.out.println("do something");
    }
}
