@startuml
skinparam classAttributeIconSize 0

abstract class Component {
    +operation()
}
abstract class Decorator
class ConcreteDecorator
class ConcreteComponent

ConcreteDecorator -up-|> Decorator

ConcreteComponent -right-|> Component
Decorator -up-|> Component

Decorator o--> Component : +component

@enduml